[package]
name = "pastebin-cat"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = { version = "0.5", features = ["http1"], default-features = false }
reqwest = { version = "0.11", features = ["native-tls"], default-features = false }
tera = { version = "1", default-features = false }
tokio = { version = "1.0", features = ["rt-multi-thread", "macros"]}